- delete http interceptor - delete access token mechanism

--- a/teammanager.html
+++ b/teammanager.html
@@ -61,7 +61,7 @@
 <script src="js/lib/ui-router-route-to-components.js"></script>
 <script src="js/src/tmapp.js"></script>
 <script src="js/src/tmapp.init.js"></script>
-<script src="js/src/config.http.interceptor.js"></script>
+<!--<script src="js/src/config.http.interceptor.js"></script>-->
 
 <script src="js/src/components/score/score.directive.js"></script>
 <script src="js/src/components/tree/tree.component.js"></script>
@@ -69,13 +69,13 @@
 
 <script src="js/src/service/lang.service.js"></script>
 <script src="js/src/service/storage.service.js"></script>
-<script src="js/src/service/access.token.service.js"></script>
-<script src="js/src/service/http.buffer.service.js"></script>
+<!--<script src="js/src/service/access.token.service.js"></script>-->
+<!--<script src="js/src/service/http.buffer.service.js"></script>-->
 
 
 
-<script src="js/src/service/authapi.service.js"></script>
-<script src="js/src/service/authapi.factory.js"></script>
+<!--<script src="js/src/service/authapi.service.js"></script>-->
+<!--<script src="js/src/service/authapi.factory.js"></script>-->
 <script src="js/src/service/scoreapi.service.js"></script>
 <script src="js/src/service/treeapi.service.js"></script>
 
