Add Change Password page - add change password page - add change password form component - add form validation directive - add encrypt data service - add personal center api service - add ga tracking on input/button - add order modules

--- a/teammanager.html
+++ b/teammanager.html
@@ -67,7 +67,7 @@
 <script src="js/src/components/tree/tree.component.js"></script>
 <script src="js/src/components/tree/tree.nodes.directive.js"></script>
 
-<script src="js/src/service/lang.service.js"></script>
+<script src="js/src/service/magen.lang.service.js"></script>
 <script src="js/src/service/storage.service.js"></script>
 <!--<script src="js/src/service/access.token.service.js"></script>-->
 <!--<script src="js/src/service/http.buffer.service.js"></script>-->
