--- a/resetPassword.html
+++ b/resetPassword.html
@@ -34,12 +34,12 @@
 
     <!--[if lt IE 7]>
     <script type="text/javascript">
-        //<![CDATA[
-    var BLANK_URL = 'http://orderapp-pos2-uat.ddns.net/js/blank.html';
-    var BLANK_IMG = 'http://orderapp-pos2-uat.ddns.net/js/spacer.gif';
-//]]>
-</script>
-<![endif]-->
+            //<![CDATA[
+        var BLANK_URL = 'http://orderapp-pos2-uat.ddns.net/js/blank.html';
+        var BLANK_IMG = 'http://orderapp-pos2-uat.ddns.net/js/spacer.gif';
+    //]]>
+    </script>
+    <![endif]-->
 
     <link rel="stylesheet" type="text/css" href="css/all.css">
 
@@ -76,12 +76,10 @@
     <script src="js/src/service/order.apis.personalCenter.js"></script>
     <script src="js/src/service/order.validation.js"></script>
 
-
     <!--Custom-->
-    <script src="js/src/app.changePW.js"></script>
-    <script src="js/src/app.changePW.init.js"></script>
-    <script src="js/src/components/changePW/change.pw.form.js"></script>
-
+    <script src="js/src/app.resetPW.js"></script>
+    <script src="js/src/app.resetPW.init.js"></script>
+    <script src="js/src/components/resetPW/reset.pw.form.js"></script>
 
     <!--[if lt IE 8]>
     <!--<link rel="stylesheet" type="text/css" href="http://d2tpzcptk99ci1.cloudfront.net/css/3332b96f38670eafbcf58732b67fbfa8.css" media="all" />-->
@@ -90,6 +88,7 @@
     <!--<script type="text/javascript" src="http://d2tpzcptk99ci1.cloudfront.net/js/6a9692126399c34a7e32dcb2d8fac482.js"></script>-->
     <![endif]-->
 
+
     <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -97,8 +96,8 @@
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     </script>
 </head>
-<body ng-app="changePWApp" class="customer-password-change">
-    <div class="wrapper" ng-controller="changePWCtrl as vm">
+<body ng-app="resetPWApp" class="  customer-password-reset">
+    <div class="wrapper" ng-controller="resetPWCtrl as vm">
         <noscript>
             <div class="global-site-notice noscript">
                 <div class="notice-inner">
@@ -113,7 +112,7 @@
                 <h2 style="display:none;">&nbsp;</h2>
                 <div class="main">
                     <article class="col-main">
-                        <change-pw-form></change-pw-form>
+                        <reset-pw-form></reset-pw-form>
                     </article>
                 </div>
             </section>
