add order modules to team manager page - refactor team manager the files of structure - add success message box in change/reset pw pages, it will be displayed when the requests successfully - rename service for order modules

--- a/changePassword.html
+++ b/changePassword.html
@@ -44,9 +44,9 @@
     <link rel="stylesheet" type="text/css" href="css/all.css">
 
     <!--Libs-->
-    <script type="text/javascript" src="./teammanager_files/html5.js"></script>
-    <script type="text/javascript" src="./teammanager_files/jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="./teammanager_files/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="js/lib/html5.js"></script>
+    <script type="text/javascript" src="js/lib/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="js/lib/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/lib/crypto-js/core.js"></script>
     <script src="js/lib/crypto-js/enc-base64.js"></script>
     <script src="js/lib/crypto-js/md5.js"></script>
