--- a/teammanager.html
+++ b/teammanager.html
@@ -31,12 +31,9 @@
 <link rel="stylesheet" type="text/css" href="css/base.css">
 <link rel="stylesheet" type="text/css" href="css/print.css" media="print">
 
-<script type="text/javascript" src="./teammanager_files/html5.js"></script>
-<script type="text/javascript" src="./teammanager_files/jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="./teammanager_files/jquery-migrate-1.2.1.min.js"></script>
-<!--<script type="text/javascript" src="./teammanager_files/jquery.selectbox-0.2.min.js"></script>-->
-<!--<script type="text/javascript" src="./teammanager_files/jquery-ui.min.js"></script>-->
-<!--<base href="/teammanager_distributor/teammanager.html">-->
+<script type="text/javascript" src="js/lib/html5.js"></script>
+<script type="text/javascript" src="js/lib/jquery-1.11.3.min.js"></script>
+<script type="text/javascript" src="js/lib/jquery-migrate-1.2.1.min.js"></script>
 <script src="js/lib/crypto-js/core.js"></script>
 <script src="js/lib/crypto-js/enc-base64.js"></script>
 <script src="js/lib/crypto-js/sha256.js"></script>
@@ -45,44 +42,33 @@
 <script src="js/lib/crypto-js/mode-ecb.js"></script>
 <script src="js/lib/crypto-js/pad-pkcs7.js"></script>
 <script src="js/lib/lodash.js"></script>
-
 <script src="js/lib/angular.js"></script>
 <script src="js/lib/angular-sanitize.js"></script>
-
 <script src="js/lib/angular-cookies.js"></script>
 <script src="js/lib/angular-translate.js"></script>
 <script src="js/lib/angular-translate-loader-static-files.js"></script>
 <script src="js/lib/ngStorage.js"></script>
-
-
 <script src="js/lib/angular-ui-router.js"></script>
 <script src="js/lib/angular-jwt.js"></script>
 <script src="js/lib/moment.js"></script>
 <script src="js/lib/ui-router-route-to-components.js"></script>
+
+<!--Share Service-->
+<script src="js/src/service/order.magen.lang.js"></script>
+<script src="js/src/service/order.magen.auth.js"></script>
+<script src="js/src/service/order.service.storage.js"></script>
+<script src="js/src/service/order.service.crypt.js"></script>
+<script src="js/src/service/order.apis.tm.score.js"></script>
+<script src="js/src/service/order.apis.tm.tree.js"></script>
+<script src="js/src/service/order.filters.js"></script>
+<script src="js/src/service/order.widgets.layout.js"></script>
+
+<!-- Main -->
 <script src="js/src/tmapp.js"></script>
 <script src="js/src/tmapp.init.js"></script>
-<!--<script src="js/src/config.http.interceptor.js"></script>-->
-
 <script src="js/src/components/score/score.directive.js"></script>
 <script src="js/src/components/tree/tree.component.js"></script>
 <script src="js/src/components/tree/tree.nodes.directive.js"></script>
-
-<script src="js/src/service/magen.lang.service.js"></script>
-<script src="js/src/service/storage.service.js"></script>
-<!--<script src="js/src/service/access.token.service.js"></script>-->
-<!--<script src="js/src/service/http.buffer.service.js"></script>-->
-
-
-
-<!--<script src="js/src/service/authapi.service.js"></script>-->
-<!--<script src="js/src/service/authapi.factory.js"></script>-->
-<script src="js/src/service/scoreapi.service.js"></script>
-<script src="js/src/service/treeapi.service.js"></script>
-
-<script src="js/src/service/decrypt.service.js"></script>
-<script src="js/src/service/filter.js"></script>
-<script src="js/src/util/layout.util.js"></script>
-
 
 </head>
 <body class="teammanager-index-index"
